--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <div class="wrap">
         <div class="step-block">
             <div class="logo">
-                <img src="https://i.postimg.cc/NMLj4gbn/jcbql1n0o.png" alt="Designers of happiness">
+                <img src="https://i.postimg.cc/qBynjjM6/bcjgkoe8h.png" alt="Designers of happiness">
             </div>
             <div class="step-item" style="display: block;">
                 <div class="question-title">
