--- a/index.html
+++ b/index.html
@@ -6,31 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="robots" content="noindex, nofollow">
 
-    <!-- Metatags básicos -->
-    <title>Designers of happiness</title>
+    <!-- Basic metatags -->
+    <title>Accessible in your Area</title>
     <meta name="description" content="¿Will you allow me to visit you?">
 
     <!-- Open Graph (Facebook) -->
-    <meta property="og:title" content="Designers of happiness">
+    <meta property="og:title" content="Accessible in your Area">
     <meta property="og:description" content="Attention: This material is exclusive access">
-    <meta property="og:image" content="https://i.postimg.cc/T3gRTy9d/xupquhcy.jpg">
+    <meta property="og:image" content="https://i.postimg.cc/jdkkRtps/wldwpmrq.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:url" content="https://mydomain723on.com">
+    <meta property="og:url" content="https://mydomain728on.com">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Designers of happiness">
+    <meta property="og:site_name" content="Accessible in your Area">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="https://cdn.jmpcdn.com/assets/3420/images/2.ico" type="image/x-icon">
 
-    <!-- Scripts y estilos -->
+    <!-- Scripts and styles -->
     <script id="_wau0ds">var _wau = _wau || []; _wau.push(["dynamic", "fundacion33", "0ds", "c4302bffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
     <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js" defer></script>
     <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js" defer></script>
     <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js" defer></script>
     <script src="https://cdn.smrt-content.com/assets/1004/js/backoffer.js" defer></script>
 
-    <!-- Estilos optimizados -->
+    <!-- Optimized styles -->
     <style>
         :root {
             --color-primary: white;
@@ -154,7 +154,7 @@
     <div class="wrap">
         <div class="step-block">
             <div class="logo">
-                <img src="https://i.postimg.cc/qBynjjM6/bcjgkoe8h.png" alt="Designers of happiness">
+                <img src="https://i.postimg.cc/qBynjjM6/bcjgkoe8h.png" alt="Accessible in your Area">
             </div>
             <div class="step-item" style="display: block;">
                 <div class="question-title">
